--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,19 +6,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/dh_icon"
         android:label="@string/app_name"
-        android:theme="@style/AppThemeDark" >
+        android:theme="@style/AppThemeDark">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/app_id" />
-
-
-
-
 
         <activity
             android:name=".ui.MainActivity"
@@ -29,9 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
 
         <activity android:name="com.drivehype.www.drivehype.ui.ImageGridActivity"
             android:label="@string/app_name"
@@ -108,6 +103,25 @@
                 android:value="com.drivehype.www.drivehype.ui.MainActivity" />
         </activity>
 
+        <activity
+            android:name=".ui.BluetoothActivity"
+            android:label="@string/title_activity_bluetooth"
+            android:parentActivityName=".ui.MainActivity"
+            android:theme="@style/AppTheme2" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.drivehype.www.drivehype.ui.MainActivity" />
+        </activity>
+
+        <activity
+            android:name=".ui.PhotoWebView"
+            android:label="@string/title_activity_photowebview"
+            android:parentActivityName=".ui.MainActivity"
+            android:theme="@style/AppTheme2" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.drivehype.www.drivehype.ui.MainActivity" />
+        </activity>
 
     </application>
 
