--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 08 18:39:45 MST 2015
-sdk.dir=/Users/JasonPratt/Library/Android/sdk
+#Tue Jan 20 13:50:37 GMT-07:00 2015
+sdk.dir=C\:\\Users\\Elliott Goldman\\AppData\\Local\\Android\\sdk
